# query-engine

./: README.md  pyproject.toml
src/query_engine/: __init__.py  core.py  exceptions.py  pipeline_steps.py  utils.py
tests/: conftest.py  test_filtering.py  test_grouping.py  test_joins.py  test_pagination.py  test_selection.py  test_transformations.py  test_validation.py
